<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.rostilos.codecrow</groupId>
        <artifactId>codecrow-parent</artifactId>
        <version>1.0</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>codecrow-analysis-engine</artifactId>
    <packaging>jar</packaging>
    <version>1.0</version>
    <description>Core analysis logic library - reusable by IDE plugins, CLI tools, and pipeline agents</description>

    <properties>
        <java.version>17</java.version>
    </properties>

    <dependencies>
        <!-- Core library for model classes -->
        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-core</artifactId>
        </dependency>

        <!-- Commit graph (DAG) module -->
        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-commit-graph</artifactId>
        </dependency>

        <!-- File content/snapshot module -->
        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-file-content</artifactId>
        </dependency>

        <!-- Analysis API interfaces -->
        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-analysis-api</artifactId>
        </dependency>

        <!-- Events module for event-driven communication -->
        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-events</artifactId>
        </dependency>

        <!-- VCS client for provider operations -->
        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-vcs-client</artifactId>
        </dependency>

        <!-- AST parser for scope resolution -->
        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-ast-parser</artifactId>
        </dependency>
        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-plugin-contracts</artifactId>
        </dependency>

        <!-- Spring dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-queue</artifactId>
        </dependency>

        <!-- Jackson for JSON processing -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <!-- OkHttp for HTTP operations -->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
        </dependency>

        <!-- JTokkit for token counting -->
        <dependency>
            <groupId>com.knuddels</groupId>
            <artifactId>jtokkit</artifactId>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>mockwebserver</artifactId>
            <version>4.12.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Test Support -->
        <dependency>
            <groupId>org.rostilos.codecrow</groupId>
            <artifactId>codecrow-test-support</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>${project.basedir}/src/main/java/org</sourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Automatic-Module-Name>org.rostilos.codecrow.analysisengine</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        @{argLine}
                        -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${byte-buddy.version}/byte-buddy-agent-${byte-buddy.version}.jar
                        --add-opens org.rostilos.codecrow.analysisengine/org.rostilos.codecrow.analysisengine.service=com.fasterxml.jackson.databind
                        --add-opens org.rostilos.codecrow.core/org.rostilos.codecrow.core.model.branch=org.rostilos.codecrow.analysisengine
                        --add-opens org.rostilos.codecrow.core/org.rostilos.codecrow.core.model.project=org.rostilos.codecrow.analysisengine
                        --add-opens org.rostilos.codecrow.core/org.rostilos.codecrow.core.model.pullrequest=org.rostilos.codecrow.analysisengine
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
